Fix: pagination alignment"

--- a/src/App.css
+++ b/src/App.css
@@ -64,18 +64,12 @@ button {
     background-color: rgb(168, 160, 150);
 }
 
-tfoot {
-    width: 100%;
-    position: relative;
-    right: 0
-}
-
 .table-footer {
+    margin-top: 1em;
+    width: 100%;
     display: flex;
     gap: 1em;
     justify-content: center;
     align-items: center;
-    margin: 1em;
-    width: 100%;
-    background-color: aliceblue;
+    display: flex;
 }
